[gd_scene load_steps=5 format=3 uid="uid://fa2mvvuc44jl"]

[ext_resource type="Script" path="res://scenes/ui/end_screen.gd" id="1_0w64k"]
[ext_resource type="AudioStream" uid="uid://dehi1bc6a5lsw" path="res://assets/audio/music/jingles_victory.ogg" id="2_6ow76"]
[ext_resource type="PackedScene" uid="uid://b5g8avsa3oll2" path="res://scenes/ui/sound_button.tscn" id="2_u5ytr"]
[ext_resource type="AudioStream" uid="uid://lbfj8goks84v" path="res://assets/audio/music/jingles_defeat.ogg" id="3_os1j4"]

[node name="VictoryScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_0w64k")

[node name="VictoryAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_6ow76")
volume_db = -5.0
bus = &"sfx"

[node name="DefeatAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_os1j4")
volume_db = -5.0
bus = &"sfx"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.0470588, 0.164706, 0.407843, 1)
theme_override_colors/font_outline_color = Color(0.0470588, 0.164706, 0.407843, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "Victory"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.0470588, 0.164706, 0.407843, 1)
theme_override_constants/outline_size = 8
text = "You won!"
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="RestartButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_u5ytr")]
unique_name_in_owner = true
layout_mode = 2
text = "Restart"

[node name="QuitButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_u5ytr")]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"
